--- a/register.html
+++ b/register.html
@@ -148,11 +148,10 @@
 
 
   <script>
-    
     let isVerified = false;
-
+  
     emailjs.init('x7qRqNbN7C3eGzGQP');
-
+  
     var firebaseConfig = {
       apiKey: "AIzaSyCT0Li1XXZ4hZjBTrU8rp1N-ixV5dTrSZQ",
       authDomain: "dg11-c954c.firebaseapp.com",
@@ -161,67 +160,80 @@
       messagingSenderId: "1010585577335",
       appId: "1:1010585577335:web:ad4f84c5205ba048b22372"
     };
-
+  
     firebase.initializeApp(firebaseConfig);
     var db = firebase.firestore();
-
+  
     const fixedEmail = "q5413692@gmail.com";
-
+  
     document.addEventListener("DOMContentLoaded", () => {
       document.getElementById('registerForm').addEventListener('submit', function(e) {
         e.preventDefault();
         const username = document.getElementById('username').value;
         const password = document.getElementById('password').value;
         const confirmPassword = document.getElementById('confirmPassword').value;
-
+  
         if (!isVerified) {
-  alert('請先完成 Email 驗證後再註冊！');
-  return;
-}
-
+          alert('請先完成 Email 驗證後再註冊！');
+          return;
+        }
+  
         if (password !== confirmPassword) {
           alert('密碼不一致！');
           return;
         }
-
-        let users = JSON.parse(localStorage.getItem('users')) || [];
-        const userExists = users.some(user => user.username === username);
-
-        if (userExists) {
-          alert('此帳號已經存在！');
-          return;
-        }
-
-        const newUser = { username, password };
-        users.push(newUser);
-        localStorage.setItem('users', JSON.stringify(users));
-
-        alert('註冊成功！');
-        window.location.href = 'index.html';
+  
+        // 檢查用戶是否已經註冊
+        db.collection('users').where('username', '==', username)
+          .get()
+          .then((querySnapshot) => {
+            if (!querySnapshot.empty) {
+              alert('此帳號已經存在！');
+              return;
+            }
+  
+            // 儲存新用戶到 Firestore
+            db.collection('users').add({
+              username: username,
+              password: password
+            })
+            .then(() => {
+              alert('註冊成功！');
+              window.location.href = 'index.html'; // 註冊成功後跳轉到登入頁
+            })
+            .catch((error) => {
+              console.error("註冊錯誤：", error);
+              alert("註冊失敗，請稍後再試");
+            });
+          })
+          .catch((error) => {
+            console.error("檢查用戶存在錯誤：", error);
+            alert("檢查用戶是否存在時發生錯誤");
+          });
       });
-
+  
       const form = document.getElementById('emailVerifyForm');
-
+  
       form.addEventListener('submit', async (e) => {
         e.preventDefault();
         const email = document.getElementById('verifyEmail').value.trim();
-
+  
         if (email !== fixedEmail) {
           alert("此 Email 無授權註冊");
           return;
         }
-
+  
         const code = Math.floor(100000 + Math.random() * 900000).toString();
         const expiresAt = new Date().getTime() + 5 * 60 * 1000;
-
+  
         try {
           await db.collection('verifications').doc(email).set({ code, expiresAt });
-
+  
           await emailjs.send('service_3b5o83t', 'Verification Code Templa', {
             to_email: email,
             code: code
           });
-
+  
           alert("驗證碼已寄出！");
           document.getElementById('codeSection').style.display = 'block';
         } catch (err) {
@@ -230,31 +242,31 @@
         }
       });
     });
-
+  
     async function verifyCode() {
       const email = document.getElementById('verifyEmail').value.trim();
       const userCode = document.getElementById('verifyCode').value.trim();
-
+  
       try {
         const docRef = db.collection('verifications').doc(email);
         const docSnap = await docRef.get();
-
+  
         if (!docSnap.exists) {
           alert("找不到驗證紀錄，請重新請求驗證碼");
           return;
         }
-
+  
         const data = docSnap.data();
         const now = new Date().getTime();
-
+  
         if (now > data.expiresAt) {
-  alert("驗證碼已過期，請重新發送");
-} else if (userCode === data.code) {
-  isVerified = true;
-  alert("✅ 驗證成功！可以註冊帳號了");
-} else {
-  alert("驗證碼錯誤，請重新輸入");
-}
+          alert("驗證碼已過期，請重新發送");
+        } else if (userCode === data.code) {
+          isVerified = true;
+          alert("✅ 驗證成功！可以註冊帳號了");
+        } else {
+          alert("驗證碼錯誤，請重新輸入");
+        }
       } catch (err) {
         console.error("驗證錯誤：", err);
         alert("驗證失敗，請稍後再試");
