--- a/home.html
+++ b/home.html
@@ -165,6 +165,49 @@
         left: 30px;
       }
     }
+
+    .user-id-box {
+  position: absolute;
+  top: 30px;
+  left: 50px;
+  padding: 12px 25px;
+  border-radius: 25px;
+  background: rgba(0, 0, 0, 0.6);  /* 深色透明背景 */
+  backdrop-filter: blur(20px);  /* 背景模糊效果 */
+  -webkit-backdrop-filter: blur(20px);
+  border: 2px solid rgba(255, 255, 255, 0.6);  /* 明顯邊框 */
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.4), inset 0 0 5px rgba(255, 255, 255, 0.6); /* 強化陰影效果 */
+  font-family: 'Poppins', sans-serif;
+  font-size: 22px;  /* 增加字體大小 */
+  font-weight: 700;
+  color: #ffffff;  /* 亮白色字體 */
+  text-shadow: 0 3px 6px rgba(0, 0, 0, 0.6);  /* 更強的文字陰影 */
+  transition: all 0.3s ease;
+  animation: fadeInSlide 0.6s ease-out forwards;
+  opacity: 0;
+  z-index: 99;
+  cursor: pointer;
+}
+
+.user-id-box:hover {
+  transform: scale(1.05);
+  box-shadow: 0 12px 30px rgba(0, 0, 0, 0.6), inset 0 0 5px rgba(255, 255, 255, 0.8);
+  border-color: rgba(255, 255, 255, 1);
+  color: #ff4d9a;  /* 滑鼠懸停時的粉紅色文字 */
+  letter-spacing: 2px;
+  text-shadow: 0 4px 10px rgba(255, 77, 154, 0.8);
+}
+
+@keyframes fadeInSlide {
+  0% {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
   </style>
   
   
@@ -172,6 +215,7 @@
   
 </head>
 <body>
+
   <div class="header">
     <button class="logout-btn" onclick="logout()">登出</button>
   </div>
@@ -190,6 +234,9 @@
     <div class="footer">
       <p>© 2025 11DG11 系統 | <a href="xzw.html">隱私政策</a></p>
     </div>
+<!-- 左上角顯示登入 ID -->
+<div id="user-id" class="user-id-box"></div>
+
   </div>
 
   <script>
@@ -198,6 +245,52 @@
       window.location.href = 'index.html';
     }
   </script>
+
+<!-- Firebase SDK（若頁面還沒引入） -->
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
+
+<script>
+  // ✅ 初始化 Firebase（如果尚未初始化）
+  const firebaseConfig = {
+    apiKey: "AIzaSyCT0Li1XXZ4hZjBTrU8rp1N-ixV5dTrSZQ",
+    authDomain: "dg11-c954c.firebaseapp.com",
+    projectId: "dg11-c954c",
+    storageBucket: "dg11-c954c.appspot.com",
+    messagingSenderId: "1010585577335",
+    appId: "1:1010585577335:web:ad4f84c5205ba048b22372"
+  };
+
+  if (!firebase.apps.length) {
+    firebase.initializeApp(firebaseConfig);
+  }
+
+  const db = firebase.firestore();
+
+  // ✅ 顯示登入用戶資訊
+  window.addEventListener('DOMContentLoaded', function () {
+    const userId = sessionStorage.getItem('loggedInUserId'); // 必須在登入時先存這個 ID
+
+    if (userId) {
+      db.collection('users').doc(userId).get()
+        .then((doc) => {
+          if (doc.exists) {
+            const userData = doc.data();
+            document.getElementById('user-id').textContent = `已登入：${userData.username}`;
+          } else {
+            document.getElementById('user-id').textContent = '找不到使用者';
+          }
+        })
+        .catch((error) => {
+          console.error("查詢錯誤：", error);
+          document.getElementById('user-id').textContent = '讀取失敗';
+        });
+    } else {
+      document.getElementById('user-id').textContent = '尚未登入';
+    }
+  });
+</script>
+
 </body>
 </html>
 
