--- a/blacklist.html
+++ b/blacklist.html
@@ -289,20 +289,28 @@
       }
     }
 
-     // 登出函式
-     function logout() {
-      sessionStorage.removeItem('loggedInUserId');  // 清除登入資訊
+ // 登出函式
+ function logout() {
+    const userId = sessionStorage.getItem('loggedInUserId'); // 先獲取當前用戶的 ID
+
+    if (userId) {
       // 更新 Firestore 中的 loggedIn 欄位為 false
-      const userId = sessionStorage.getItem('loggedInUserId');
-      if (userId) {
-        db.collection('users').doc(userId).update({
-          loggedIn: false
-        });
-      }
-      // 登出後跳轉到登入頁面
-      window.location.href = 'login.html';  // 替換成你的登入頁面
+      db.collection('users').doc(userId).update({
+        loggedIn: false
+      }).then(() => {
+        // 清除 sessionStorage 登入資料
+        sessionStorage.removeItem('loggedInUserId');
+        localStorage.removeItem('loggedInUser'); // 如果有儲存用戶名，也可以清除
+
+        // 登出後跳轉到登入頁面
+        window.location.href = 'login.html';  // 替換成你的登入頁面
+      }).catch((error) => {
+        console.error("登出錯誤：", error);
+        alert("登出失敗，請稍後再試");
+      });
     }
-  </script>
+  }
+</script>
   <a href="home.html" class="back-to-home-btn">🏠 返回主頁</a>
 </body>
 </html>
