--- a/blacklist.html
+++ b/blacklist.html
@@ -303,7 +303,7 @@
         localStorage.removeItem('loggedInUser'); // 如果有儲存用戶名，也可以清除
 
         // 登出後跳轉到登入頁面
-        window.location.href = 'login.html';  // 替換成你的登入頁面
+        window.location.href = 'index.html';  // 替換成你的登入頁面
       }).catch((error) => {
         console.error("登出錯誤：", error);
         alert("登出失敗，請稍後再試");
