--- a/blacklist.html
+++ b/blacklist.html
@@ -210,7 +210,7 @@
 
     if (!userId) {
       // 如果用戶未登入，跳轉到登入頁面
-      window.location.href = 'login.html';  // 替換成你的登入頁面
+      window.location.href = 'index.html';  // 替換成你的登入頁面
     } else {
       // 從 Firestore 查詢用戶資料
       db.collection('users').doc(userId).get()
@@ -221,7 +221,7 @@
             // 檢查用戶是否已登入（根據 Firestore 中的 loggedIn 欄位）
             if (!userData.loggedIn) {
               // 用戶未登入，跳轉到其他頁面
-              window.location.href = 'login.html';  // 替換成登入頁面
+              window.location.href = 'index.html';  // 替換成登入頁面
             } else {
               // 如果是管理員用戶（假設有角色欄位）
               if (userData.role !== 'admin') {
@@ -232,12 +232,12 @@
               }
             }
           } else {
-            window.location.href = 'login.html';  // 用戶資料不存在，跳轉到登入頁面
+            window.location.href = 'index.html';  // 用戶資料不存在，跳轉到登入頁面
           }
         })
         .catch((error) => {
           console.error("查詢錯誤：", error);
-          window.location.href = 'login.html';  // 查詢錯誤，跳轉到登入頁面
+          window.location.href = 'index.html';  // 查詢錯誤，跳轉到登入頁面
         });
     }
   });
